tests/baselines/reference/generatorTypeCheck26(strict=true).errors.txt
generatorTypeCheck26.ts(4,12): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== generatorTypeCheck26.ts (1 errors) ====
    function* g(): IterableIterator<(x: string) => number> {
        yield x => x.length;
        yield *[x => x.length];
        return x => x.length;
               ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }